--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1">
       <title>YOLO</title>
       <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
-			<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Sans|Varela+Round|Lato|Montserrat|Ubuntu|Nunito" rel="stylesheet">
       <link href="themify-icons.css" rel="stylesheet">
       <link href="css/app.min.css" rel="stylesheet">
     </head>
