--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <script src="bower_components/angular-animate/angular-animate.min.js"></script>
       <script src="bower_components/angular-aria/angular-aria.min.js"></script>
       <script src="bower_components/angular-messages/angular-messages.min.js"></script>
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-route.min.js"></script>
+      <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
       <script src="bower_components/angular-material/angular-material.min.js"></script>
       <script src="https://apis.google.com/js/client.js?onload=googleApiClientReady"></script>
       <script src="https://apis.google.com/js/client.js?onload=init"></script>
